
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int ipidRemUnknown; } ;
struct stub_manager {int lock; int norm_refs; int ifstubs; TYPE_1__ oxid_info; int object; int oid; } ;
struct ifstub {int flags; int ipid; int entry; int iid; int * stubbuffer; int iface; int chan; } ;
typedef int * REFIID ;
typedef int MSHLFLAGS ;
typedef int IRpcStubBuffer ;
typedef scalar_t__ HRESULT ;
typedef int DWORD ;


 int EnterCriticalSection (int *) ;
 int GetProcessHeap () ;
 int HEAP_ZERO_MEMORY ;
 struct ifstub* HeapAlloc (int ,int ,int) ;
 int HeapFree (int ,int ,struct ifstub*) ;
 int IRpcStubBuffer_AddRef (int *) ;
 scalar_t__ IUnknown_QueryInterface (int ,int *,void**) ;
 int IUnknown_Release (int ) ;
 int LeaveCriticalSection (int *) ;
 int MSHLFLAGSP_REMUNKNOWN ;
 int MSHLFLAGS_NORMAL ;
 scalar_t__ RPC_CreateServerChannel (int ,void*,int *) ;
 scalar_t__ S_OK ;
 int TRACE (char*,struct ifstub*,int ,...) ;
 int debugstr_guid (int *) ;
 int generate_ipid (struct stub_manager*,int *) ;
 int list_add_head (int *,int *) ;
 int wine_dbgstr_longlong (int ) ;

struct ifstub *stub_manager_new_ifstub(struct stub_manager *m, IRpcStubBuffer *sb, REFIID iid, DWORD dest_context,
    void *dest_context_data, MSHLFLAGS flags)
{
    struct ifstub *stub;
    HRESULT hr;

    TRACE("oid=%s, stubbuffer=%p, iid=%s, dest_context=%x\n", wine_dbgstr_longlong(m->oid), sb,
          debugstr_guid(iid), dest_context);

    stub = HeapAlloc(GetProcessHeap(), HEAP_ZERO_MEMORY, sizeof(struct ifstub));
    if (!stub) return ((void*)0);

    hr = IUnknown_QueryInterface(m->object, iid, (void **)&stub->iface);
    if (hr != S_OK)
    {
        HeapFree(GetProcessHeap(), 0, stub);
        return ((void*)0);
    }

    hr = RPC_CreateServerChannel(dest_context, dest_context_data, &stub->chan);
    if (hr != S_OK)
    {
        IUnknown_Release(stub->iface);
        HeapFree(GetProcessHeap(), 0, stub);
        return ((void*)0);
    }

    stub->stubbuffer = sb;
    if (sb) IRpcStubBuffer_AddRef(sb);

    stub->flags = flags;
    stub->iid = *iid;



    if (flags & MSHLFLAGSP_REMUNKNOWN)
        stub->ipid = m->oxid_info.ipidRemUnknown;
    else
        generate_ipid(m, &stub->ipid);

    EnterCriticalSection(&m->lock);
    list_add_head(&m->ifstubs, &stub->entry);

    if (flags & MSHLFLAGS_NORMAL) m->norm_refs++;
    LeaveCriticalSection(&m->lock);

    TRACE("ifstub %p created with ipid %s\n", stub, debugstr_guid(&stub->ipid));

    return stub;
}
